--- a/css/sign-in.css
+++ b/css/sign-in.css
@@ -10,7 +10,7 @@
 
 .img {
     width: 50%;
-    height: 100vh;
+    height: 110vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -47,9 +47,7 @@ label {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-input[type="text"],
-input[type="Email"],
-input[type="password"] {
+.usu {
     border-radius: 4px;
     width: 80%;
     height: 40px;
@@ -60,25 +58,24 @@ input[type="password"] {
     border-color: rgb(188, 188, 188);
 }
 
-input[type="text"]:focus,
-input[type="Email"]:focus,
-input[type="password"]:focus {
+.usu:focus,
+.loc:hover,
+.comp:hover,
+.est:hover {
     transition: 500ms;
     outline: none;
     border-color: rgb(142, 37, 116);
     background-color: rgb(219, 219, 219);
 }
 
-input[type="text"]:hover,
-input[type="Email"]:hover,
-input[type="password"]:hover {
+.usu:hover {
     transition: 500ms;
     outline: none;
     border-color: rgb(142, 37, 116);
     background-color: rgb(219, 219, 219);
 }
 
-button {
+button[type='submit'] {
     border-radius: 7px;
     font-size: 18px;
     padding: 15px;
@@ -88,7 +85,7 @@ button {
     transition: padding-left 200ms ease;
 }
 
-button:hover {
+button[type='submit']:hover {
     padding-left: 20px;
     transition: 200ms;
 }
@@ -99,6 +96,8 @@ input[type="checkbox"] {
     width: 16px;
     height: 16px;
 }
+
+
 
 
 .img-phone {
