--- a/css/aplication.css
+++ b/css/aplication.css
@@ -46,90 +46,32 @@
     padding: 2%;
     background-color: rgb(228, 210, 224);
     border-radius: 7px;
+    transition: all 180ms ease;
+
 }
+
 
 #products {
     border-radius: 10px;
     height: 500px;
-
+    display: block;
     overflow-y: scroll;
     height: 700px;
     white-space: normal;
+    transition: all 180ms ease;
+
 }
 
-.selected-product {
-    background-color: rgb(140, 41, 79);
-}
 
 
 
-
-
-#selectedProducts {
-    overflow-y: scroll;
-    white-space: normal;
-    display: inline-block;
-    width: 100%;
-    height: 510px;
-}
-
-#selectedProducts div {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border-radius: 7px;
-    background-color: rgb(255, 254, 246);
-    height: 80px;
-    width: 98%;
-    margin: 1%;
-}
 
 .product:hover {
     transform: scale(1.1);
-    transition: 100ms ease;
+    transition: all 180ms ease;
 }
 
-.remove {
-    margin: 1%;
-    width: 40%;
-    height: 80px;
-    background-color: rgb(140, 41, 79);
-    border-style: none;
-    font-style: oblique;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: aliceblue;
-    font-size: 16px;
-    border-radius: 7px;
-}
 
-.bt {
-    width: 30px;
-    height: 40px;
-    background-color: rgb(142, 37, 116);
-    border-radius: 3px;
-    border-style: none;
-    color: aliceblue;
-}
-
-.confirm {
-    background-color: rgb(142, 37, 116);
-    border-radius: 7px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    line-height: 60px;
-    color: aliceblue;
-    font-size: 40px;
-}
-
-.confirm p {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.confirm:hover {
-    filter: opacity(80%);
-    transition: 100ms ease;
-}
 
 hr {
     width: 90%;
