--- a/css/login.css
+++ b/css/login.css
@@ -11,6 +11,8 @@
     width: 30%;
 }
 
+
+
 .img {
     width: 50%;
     height: 100vh;
@@ -111,7 +113,7 @@ input[type="password"]:hover {
     background-color: rgb(219, 219, 219);
 }
 
-button {
+input[type='submit']{
     border-radius: 7px;
     font-size: 18px;
     padding: 15px;
@@ -121,7 +123,7 @@ button {
     transition: padding-left 200ms ease;
 }
 
-button:hover {
+input[type='submit']:hover{
     padding-left: 20px;
     transition: 200ms;
 }
