--- a/css/sign-in.css
+++ b/css/sign-in.css
@@ -1,5 +1,6 @@
 * {
     margin: 0;
+
     padding: 0;
 }
 
@@ -10,7 +11,7 @@
 
 .img {
     width: 50%;
-    height: 110vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,7 +28,7 @@
 
 
 .sign-in-camp {
-
+    display: block;
     margin-left: 5%;
     margin-top: 10vh;
     height: auto;
@@ -75,7 +76,7 @@ label {
     background-color: rgb(219, 219, 219);
 }
 
-button[type='submit'] {
+button[type='button'],button[type='submit'] {
     border-radius: 7px;
     font-size: 18px;
     padding: 15px;
@@ -85,9 +86,43 @@ button[type='submit'] {
     transition: padding-left 200ms ease;
 }
 
-button[type='submit']:hover {
+button[type='button']:hover, button[type='submit']:hover {
     padding-left: 20px;
     transition: 200ms;
+}
+
+.location-camp{
+    display: none;
+    margin-left: 5%;
+    margin-top: 10vh;
+    height: auto;
+}
+.location-camp h1 {
+    text-align: center;
+    color: rgb(142, 37, 116);
+    font-size: 100px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.bot{
+    border-radius: 7px;
+    font-size: 18px;
+    padding: 15px;
+    border: none;
+    color: white;
+    background-color: rgb(142, 37, 116);
+    transition: padding-left 200ms ease;
+}
+.bot:hover{
+    padding-left: 50px;
+    transition: 200ms;
+}
+
+.location-camp p,
+label {
+    font-size: 20px;
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
